--- a/test/test.vcxproj
+++ b/test/test.vcxproj
@@ -132,7 +132,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\01_hello_SDL\01_hello_SDL.cpp" />
+    <ClCompile Include="screen_test.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
