--- a/test/test.vcxproj.filters
+++ b/test/test.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\01_hello_SDL\01_hello_SDL.cpp">
+    <ClCompile Include="screen_test.cpp">
       <Filter>來源檔案</Filter>
     </ClCompile>
   </ItemGroup>
